# template_fast_api

./: .gitignore  README.md  ecosystem.config.cjs  pyproject.toml
src/: api_client.py  config.py  database.py  dependencies.py  main.py
src/auth/: models.py  repository.py  routers.py  schemas.py
src/core/: __init__.py  abstract_repo.py  generic_crud_repo.py  mixins.py  redis_client.py  schemas.py  utils.py  validators.py
src/core/exceptions/: search.py
src/core/schemas/: __init__.py  base.py  search.py
src/core/services/: __init__.py  search_service.py  superuser.py
src/migration/: env.py
src/migration/versions/: b07b22043b82_initial_revision.py
