[project]
name = "marketplaces-cms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.11.16",
    "aioredis>=2.0.1",
    "alembic>=1.15.2",
    "asyncpg>=0.30.0",
    "authx>=1.4.2",
    "fastapi>=0.115.12",
    "fastapi-users[sqlalchemy]>=14.0.1",
    "greenlet>=3.1.1",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "openpyxl>=3.1.5",
    "pwdlib>=0.2.1",
    "pydantic-settings>=2.8.1",
    "redis>=6.2.0",
    "rich>=14.0.0",
    "sqlalchemy>=2.0.40",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.399",
    "pyright>=1.1.403",
]

[tool.mypy]
python_version = "3.13.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

exclude = [
    "^tests/",
    "^migrations/",
    "^venv/",
]
